--- a/secret-board-3033/app.json
+++ b/secret-board-3033/app.json
@@ -3,8 +3,6 @@
   "description": "秘密の匿名掲示板",
   "repository": "https://github.com/progedu/secret-board-3033",
   "logo": "",
-  "keywords": [
-    "node"
-  ],
+  "keywords": ["node"],
   "image": "heroku/nodejs"
 }
