--- a/schedule-arranger-4022/package.json
+++ b/schedule-arranger-4022/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
+    "damage-calc": "git+https://github.com/progedu/damage-calc-4006.git",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "express-session": "^1.13.0",
